[gd_scene load_steps=12 format=2]

[ext_resource path="res://Shop/Item_detail1.PNG" type="Texture" id=1]
[ext_resource path="res://Item/GloveFabric.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Doublespace/PeaberryDoublespace.woff2" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts/Peaberry-Font-v2.0/Peaberry Font Family/Peaberry Doublespace/Peaberry-Doublespace.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Shop/ShopTooltip.gd" type="Script" id=5]
[ext_resource path="res://Shop/Buy.PNG" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ShopTooltip" type="Popup"]
margin_right = 125.0
margin_bottom = 230.0
rect_min_size = Vector2( 125, 230 )
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="NinePatchRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = 14.0
margin_right = 36.0
margin_bottom = 81.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 91.0
margin_right = -5.0
margin_bottom = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 110.0
margin_bottom = 149.0

[node name="ItemName" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.356863, 0.517647, 0.827451, 1 )
custom_fonts/font = SubResource( 1 )
text = "<ItemName>"
align = 1

[node name="Category" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 110.0
margin_bottom = 24.0
mouse_filter = 2

[node name="ItemCategory" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Category"]
margin_right = 56.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.831373, 0.580392, 0.290196, 1 )
custom_fonts/font = SubResource( 2 )
text = "<Category>"

[node name="Stats" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 110.0
margin_bottom = 36.0
mouse_filter = 2

[node name="Stat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stats"]
margin_right = 32.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.211765, 0.682353, 0.0196078, 1 )
custom_fonts/font = SubResource( 2 )
text = "<Stat>"

[node name="Diff" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Stats"]
margin_left = 36.0
margin_right = 69.0
margin_bottom = 8.0
custom_colors/font_color = Color( 0.894118, 0.309804, 0.235294, 1 )
custom_fonts/font = SubResource( 2 )
text = "<Diff>"

[node name="Desc" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 110.0
margin_bottom = 120.0
mouse_filter = 2

[node name="Description" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/Desc"]
margin_right = 110.0
margin_bottom = 80.0
rect_min_size = Vector2( 110, 80 )
custom_colors/font_color = Color( 0.439216, 0.443137, 0.435294, 1 )
custom_fonts/font = SubResource( 2 )
text = "<Description>"
autowrap = true

[node name="BuyButton" type="Button" parent="."]
margin_left = 56.0
margin_top = 196.0
margin_right = 123.0
margin_bottom = 232.0
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="BuyButtonLabel" type="Label" parent="BuyButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Buy"
align = 1
valign = 1

[node name="SoldOut" type="Label" parent="."]
visible = false
margin_left = 40.0
margin_top = 208.0
margin_right = 120.0
margin_bottom = 224.0
custom_colors/font_color = Color( 0.270588, 0.270588, 0.270588, 1 )
custom_fonts/font = SubResource( 5 )
text = "Sold Out"

[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
